--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    font-family: "Parisienne";
+  }
+}
+
 /* cyrillic */
 @font-face {
   font-family: "Neucha";
